--- a/ProxyByRegex/ProxyByRegex.csproj
+++ b/ProxyByRegex/ProxyByRegex.csproj
@@ -16,5 +16,12 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.3.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.2" />
+    <PackageReference Include="RazorLight" Version="2.3.1" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.6.13" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="EmailTemplate.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
